new layout for customer